@@ -39,9 +39,15 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.49 2010/04/11 11:40:42 alfred Exp $                     */
+/* $Id: version.c,v 1.51 2010/06/14 17:20:45 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.51  2010/06/14 17:20:45  alfred
+ * - 1.42 Bld78
+ *
+ * Revision 1.50  2010/05/01 17:22:25  alfred
+ * - -
+ *
  * Revision 1.49  2010/04/11 11:40:42  alfred
  * - 1.42 Bld 76
  *
@@ -227,8 +233,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 77]";
-char *DebVersion = "1.42bld77-1";
+char *Version="1.42 Beta [Bld 78]";
+char *DebVersion = "1.42bld78-1";
 LongInt VerNo=0x142f;
 
 char *InfoMessCopyright="(C) 1992,2010 Alfred Arnold";
